# Py-CPP-LUT

./: CMakeLists.txt  README.md  make.sh
cpp/: ApplyLUT.cpp  lut.hpp
python/: PyApplyLUT.py
test/: py_lut_inference_test.py
test/Foodie-cube/: Foodie BQ1.cube
